# kval

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE-APACHE  LICENSE.txt  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci_pytest_kval_macOS.yml  ci_pytest_kval_mac_win.yml  ci_pytest_kval_ubuntu.yml  ci_pytest_kval_ubuntu_py11.yml  ci_pytest_kval_win.yml  ci_test_kval.yml  kval_test_on_commit.yml
development/btl_parse/: _test_btl_parse.py
development/example_notebooks/: Test case - ATWAIN cnvs.ipynb  test.txt
development/testing/: Testing with a simple mock dataset.ipynb
development/workflow_toktdisk/: A Before starting.ipynb
docs/: kval_docs_env.yml  requirements.txt
docs/source/: conf.py  index.md
docs/source/examples/: examples.md
docs/source/examples/notebooks/: CTD_profiles_minimal_example.ipynb
docs/source/other/: about.md  install.md
docs/source/usage/: install.md  using_kval.md
io/: Make functions for cnv parser.ipynb  cnv.py  variable_defs.py
src/kval/: __init__.py
src/kval/calc/: number.py  numbers.py
src/kval/data/: ctd.py  dataset.py  edit.py  moored.py
src/kval/data/moored_tools/: _compare_moored_prof.py  _moored_decorator.py  _moored_tools.py
src/kval/data/nc_format/: _standard_attrs.py  _standard_attrs_org.py  conventionalize.py
src/kval/data/ship_ctd_tools/: _ctd_decorator.py  _ctd_edit.py  _ctd_tools.py  _ctd_visualize.py  qc_salt.py
src/kval/file/: __init__.py  _variable_defs.py  matfile.py  rbr.py  sbe.py  xr_funcs.py
src/kval/geo/: geocalc.py
src/kval/io/: __init__.py  matfile.py  sbe.py
src/kval/maps/: maptools.py  quickmap.py
src/kval/metadata/: _standard_attrs.py  _standard_attrs_org.py  check_conventions.py  conventionalize.py  io.py
src/kval/nc_format/: check_conventions.py  conventionalize.py
src/kval/ocean/: empirical.py  uv.py
src/kval/signal/: despike.py  filt.py  interp.py  spec.py
src/kval/util/: era5.py  filt.py  index.py  internals.py  magdec.py  time.py  xr_funcs.py
src/oceanograpy/: __init__.py
src/oceanograpy/data/: _var_names_standard_attrs_UNUSED_I_THINK.py  ctd.py
src/oceanograpy/data/nc_format/: _standard_attrs.py  check_conventions.py  conventionalize.py
src/oceanograpy/data/ship_ctd/: qc.py  tools.py
src/oceanograpy/data/ship_ctd_tools/: _ctd_edit.py  _ctd_tools.py  _ctd_visualize.py  qc_salt.py
src/oceanograpy/geo/: calc.py
src/oceanograpy/io/: _variable_defs.py  cnv.py  matfile.py  sbe.py  variable_defs.py
src/oceanograpy/maps/: quickmap.py
src/oceanograpy/util/: calc.py  time.py  user_input.py
tests/: README_tests.md
tests/calc/: test_numbers.py
tests/functional_tests/: test_imports.py
tests/functional_tests/test_ctd_prof/test_ctd_edit_pipeline/: Testing with a simple mock dataset.ipynb  Untitled.ipynb  test_cnv_pipeline_atwain.py
tests/functional_tests/test_ctd_prof/test_troll_transect_22_23/: make test for troll transect.ipynb  test_pipeline_troll_22_23.py
tests/test_data/sbe_files/sbe37/cnv/: README.txt  test_sbe37.cnv
tests/test_data/sbe_files/sbe37/raw/: SBE37SMP-ODO-RS232_03723180_2022_10_09.XML  SBE37SMP-ODO-RS232_03723180_2022_10_09.hex  (+1 more)
tests/test_data/sbe_files/sbe56/: AMU22_SBE56-1225_test.cnv  README.md  SBE05602355_NABOS-test.csv  SBE56-1232_test.csv
tests/unit_tests/calc/: test_number.py  test_numbers.py
tests/unit_tests/data/: test_ctd.py  test_dataset.py  test_edit.py  test_moored.py
tests/unit_tests/file/: test_rbr.py  test_sbe.py  test_xr_funcs.py
tests/unit_tests/geo/: test_geocalc.py
tests/unit_tests/io/: test_sbe.py
tests/unit_tests/map/: test_maptools.py
tests/unit_tests/metadata/: test_conventionalize.py
tests/unit_tests/ocean/: test_uv.py
tests/unit_tests/signal/: test_despike.py  test_filt.py
tests/unit_tests/util/: test_era5.py  test_filt.py  test_index.py  test_internals.py  test_magdec.py  test_time.py
util/: time.py
(+30 files in other folders)
