[project]
name = "oceanograpy"
description = "Tools for oceanographic data processing and analysis in Python"
version = "0.1.0"
readme = "README.md"
authors = [ { name = "Øyvind Lundesgaard", email = "oyvind.lundesgaard@npolar.no" }, ]
maintainers = [ { name = "Norwegian Polar Institute, Oceanography section", email = "" }, ]
requires-python = ">=3.8"
dependencies = [
  'xarray>=2023.8.0',
  'python>=3.10',
  'jupyter>=1.0.0',
  'nb_conda_kernels>=2.3.1',
  'ipykernel>=6.26.0',
  'matplotlib>=3.7.2',
  'numpy>=1.25.2',
  'pandas>=2.1.0',
  'glob2>=0.7',
  'seawater>=3.3.4',
  'cartopy>=0.22',
  'openpyxl>=3.1.2',
  'cftime>=1.6.2',
  'scipy>=1.11.3',
  'cmocean>=3.0.3',
  'tqdm>=4.66.1',
  'ipympl>=0.9.3',
  'compliance-checker>=5.1.0',
  'xlrd>=2.0.1',
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Oceanography",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/NPIOcean/oceanograPy/"
