[project]
name = "kval"

description = "Tools for oceanographic data processing and analysis in Python"

version = "0.1.0"

readme = "README.md"

authors = [
  { name = "Øyvind Foss", email = "oyvind.foss@npolar.no" }, 
]

maintainers = [
  { name = "Norwegian Polar Institute, Oceanography section", email = "" },
]

requires-python = ">=3.8"

dependencies = [
  'xarray>=2023.8.0',
]


classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Oceanography",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/NPIOcean/kval/"