[project]
name = "kval"
description = "Processing and analysis of ocean data in Python"
version = "0.4.0"
readme = "README.md"

authors = [
  { name = "Øyvind Foss", email = "oyvind.foss@npolar.no" },
  { name = "Tore Hattermann", email = "tore.hattermann@npolar.no" },

]

maintainers = [
  { name = "Norwegian Polar Institute, Oceanography section", email = "" },
  { name = "Øyvind Foss, NPI", email = "oyvind.foss@npolar.no" },
]

requires-python = ">=3.10"
dependencies = [
  "xarray>=2023.10.1",
  "jupyter>=1.0.0",
  "ipykernel>=6.26.0",
  "matplotlib>=3.7.2",
  "numpy>=1.23",
  "pandas>=2.1.0",
  "glob2>=0.7",
  "cartopy>=0.21.1",
  "cftime>=1.6.2",
  "scipy>=1.11.3",
  "cmocean>=3.0.3",
  "tqdm>=4.66.1",
  "ipympl>=0.9.3",
  "xlrd>=2.0.1",
  "pyrsktools>=1.1.1",
  "pygeomag>=1.1.0",
  "compliance-checker>=5.1.0",
  "ruamel.yaml>=0.18.15",

]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

  "Topic :: Scientific/Engineering :: Oceanography",
]

license = "MIT"

[project.optional-dependencies]
compliance = [
]

dev = [
  "pytest>=8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/NPIOcean/kval/"
